# LangChain-Tutorial

./: .gitignore  create_docs.py  docs.db  docs_db_connection.py  lesson_1.py  lesson_2.py  lesson_3.py  lesson_4.py  lesson_5-1.py  lesson_5.py  lesson_6.py  lesson_7.py  lesson_8_LangGraph.py  mcp_github.agent.py  my_shop_ai_asistent.py  product.json  pyproject.toml  response.json
LinkedIn_Cource/: answers.txt  base_agent.py  lesson_1.py  lesson_2.py  lesson_3.py  lesson_4.py
OpetAPI-Tutorial/: cv_analizes.py  lesson_1.py  lesson_2.py  lesson_3.py  pyproject.toml
