[tool.poetry]
name = "langchainetutotial"
version = "0.1.0"
description = ""
authors = ["Sergei Sorochinskii <serhii_sorochynskyi@epam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
langchain = "^1.0.3"
python-dotenv = "^1.1.0"
pydantic = "^2.11.4"
langchain-community = "^0.4.1"
beautifulsoup4 = "^4.13.4"
faiss-cpu = "^1.11.0"
black = "^25.1.0"
langchain-openai = "^0.3.17"
aiosqlite = "^0.21.0"
greenlet = "^3.2.2"
pypdf2 = "^3.0.1"
blank = "^0.1.0"
crewai-tools = "^1.3.0"
langgraph = "^1.0.2"
ipython = "^9.6.0"
pillow = "^12.0.0"
langchain-text-splitters = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
