[project]
name = "opetapi-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Serhii Sorochynskyi",email = "serhii_sorochynskyi@epam.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.102.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pypdf2 (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
